# slidie-ttyd

./: .gitignore  README.md  pyproject.toml
slidie_ttyd/: __main__.py  runner.py  script_generators.py
